# django-web-components

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: pre-commit.yml  release.yml  tests.yml
django_web_components/: attributes.py  component.py  conf.py  registry.py  tag_formatter.py  template.py  utils.py
django_web_components/templatetags/: components.py
tests/: settings.py  test_attributes.py  test_component.py  test_registry.py  test_tag_formatter.py  test_template.py  test_templatetags.py  test_utils.py
tests/templates/: simple_template.html
